--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Piotr Krawiec <piotr@krawiec.me>",
     "private": true,
     "scripts": {
-        "build": "esbuild src/options.ts --bundle --sourcemap=inline --outfile=dist/options.js",
+        "build": "esbuild src/options.ts src/background.ts --bundle --sourcemap=inline --outdir=dist",
         "check-types": "tsc --declaration --emitDeclarationOnly"
     },
     "devDependencies": {
